# FTSv2

./: CMakeLists.txt  README.md
client/: client.c
client/functions/: FTS_client.h  addFile.c  addFile.h  deleteFile.c  deleteFile.h  displayListFiles.c  displayListFiles.h  downloadFile.c  downloadFile.h  fileExists.c  fileExists.h  fileExitsts.h  fileTransferRecv.c  fileTransferRecv.h  fileTransferSend.c  fileTransferSend.h  listFilesExists.c  listFilesExists.h  navigation.c  navigation.h
server/: server.c
server/functions/: FTS_server.h  addFile.c  addFile.h  deleteFile.c  deleteFile.h  downloadFile.c  downloadFile.h  fileExists.h  fileExitsts.c  fileExitsts.h  fileTransferRecv.c  fileTransferRecv.h  fileTransferSend.c  fileTransferSend.h  listFilesExists.c  listFilesExists.h  loadList.c  loadList.h  navigation.c  navigation.h  sendall.c  sendall.h
